--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   },
   "type": "module",
   "dependencies": {
+    "graphology": "^0.25.4",
+    "graphology-simple-path": "^0.2.0",
+    "graphology-traversal": "^0.3.1",
     "lodash": "^4.17.21",
     "mnemonist": "^0.39.5",
     "typescript": "^5.3.2"
